Revelation changelog

---------------[ xxxx-xx-xx : 0.4.4 ]---------------

2005-04-14  Erik Grinaker <erikg@codepoet.no>

	* fix syntax error in applet

	* wrote initial user interface

2005-04-13  Erik Grinaker <erikg@codepoet.no>

	* added initial applet skeleton

2005-04-06  Erik Grinaker <erikg@codepoet.no>

	* don't crash on missing revelation logo icon


---------------[ 2005-03-31 : 0.4.3 ]---------------

2005-03-31  Erik Grinaker <erikg@codepoet.no>

	* search for crack_mkdict and crack_packer in addition to
	the normal cracklib commands

	* bumped version number to 0.4.3

2005-03-24  Erik Grinaker <erikg@codepoet.no>

	* don't wrap gnome_authentication_manager_dialog_is_visible()
	(only available from libgnomeui-2.7.92)

	* minor cleanups of authmanager wrapping code

2005-03-23  Erik Grinaker <erikg@codepoet.no>

	* make configure search for new cracklib-format and
	cracklib-packer commands as well as the old mkdict and
	packer commands

	* stop autolock-timer when manually locking file, to avoid
	crash when timer tries to re-lock file

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* added quit button to unlock file dialog


---------------[ 2005-03-22 : 0.4.2 ]---------------

2005-03-22  Erik Grinaker <erikg@codepoet.no>

	* check for mkdict/packer under /sbin and /usr/sbin in
	addition to $PATH

	* don't use gtk.Action.set_sensitive() (API from gtk 2.6)

	* bumped version number to 0.4.2


---------------[ 2005-03-21 : 0.4.1 ]---------------

2005-03-21  Erik Grinaker <erikg@codepoet.no>

	* don't crash when closing non-modal dialog with escape

	* don't steal clipboard events from widgets in main window

2005-03-18  Erik Grinaker <erikg@codepoet.no>

	* left-align labels in link-buttons (for URLs etc)

	* workaround for gnome-python bug causing crashes on 64-bit
	systems when changing a preference

	* hide any open dialogs when locking the file

	* check generated passwords strength if length >= 8

	* use better lock icon
