@@ -25,12 +25,12 @@
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #
 
-import gnome, gnome.applet, gtk, sys
+import gnome, gnome.applet, gtk, os, sys
 
 if "@pythondir@" not in sys.path:
 	sys.path.insert(0, "@pythondir@")
 
-from revelation import config, dialog, ui, util
+from revelation import config, data, datahandler, dialog, io, ui, util
 
 
 class RevelationApplet(object):
@@ -44,12 +44,23 @@ class RevelationApplet(object):
 
 		self.__init_facilities()
 		self.__init_ui()
+		self.__init_states()
 
 
 	def __init_facilities(self):
 		"Sets up facilities"
 
+		self.datafile	= io.DataFile(datahandler.Revelation)
+		self.entrystore	= data.EntryStore()
 		self.items	= ui.ItemFactory(self.applet)
+
+		self.datafile.connect("changed", self.__cb_file_changed)
+
+
+	def __init_states(self):
+		"Sets up the initial states"
+
+		self.datafile.emit("changed", self.datafile.get_file())
 
 
 	def __init_ui(self):
@@ -58,16 +69,25 @@ class RevelationApplet(object):
 		# set up popup menu
 		menuxml = """
 <popup name="button3">
-	<menuitem name="prefs"	verb="prefs"	label="Preferences"	pixtype="stock"	pixname="gtk-properties" />
-	<menuitem name="kill"	verb="kill"	label="Kill"		pixtype="stock"	pixname="gtk-quit" />
-	<menuitem name="about"	verb="about"	label="About"		pixtype="stock"	pixname="gnome-stock-about" />
+	<menuitem name="file-unlock"	verb="file-unlock"	label="Unlock File"		pixtype="stock" pixname="revelation-unlock" />
+	<menuitem name="file-lock"	verb="file-lock"	label="Lock File"		pixtype="stock" pixname="revelation-lock" />
+	<menuitem name="file-reload"	verb="file-reload"	label="Reload File"		pixtype="stock" pixname="revelation-reload" />
+	<separator />
+	<menuitem name="revelation"	verb="revelation"	label="Start Revelation"	pixtype="stock" pixname="revelation-revelation" />
+	<menuitem name="prefs"		verb="prefs"		label="Preferences"		pixtype="stock"	pixname="gtk-properties" />
+	<menuitem name="about"		verb="about"		label="About"			pixtype="stock"	pixname="gnome-stock-about" />
+	<menuitem name="kill"		verb="kill"		label="Kill"			pixtype="stock"	pixname="gtk-quit" />
 </popup>
 """
 
 		self.applet.setup_menu(menuxml, (
-			( "about",	lambda w,d=None: True ),
-			( "kill",	lambda w,d=None: sys.exit() ),
-			( "prefs",	lambda w,d=None: True ),
+			( "about",		lambda w,d=None: self.about() ),
+			( "file-lock",		lambda w,d=None: self.file_close() ),
+			( "file-reload",	lambda w,d=None: self.file_reload() ),
+			( "file-unlock",	lambda w,d=None: self.file_open(self.file_get_current()) ),
+			( "kill",		lambda w,d=None: sys.exit() ),
+			( "prefs",		lambda w,d=None: True ),
+			( "revelation",		lambda w,d=None: self.launch_revelation() ),
 		), None)
 
 		# set up ui items
@@ -77,7 +97,7 @@ class RevelationApplet(object):
 		self.applet.add(ui.HBox(self.icon, self.entry))
 
 		# set up callbacks
-		self.entry.connect("button_press_event", self.__cb_focus_entry)
+		self.entry.connect("button_press_event", self.__cb_entry_clicked)
 
 
 	def __cb_exception(self, type, value, trace):
@@ -96,12 +116,127 @@ class RevelationApplet(object):
 			sys.exit(1)
 
 
-	def __cb_focus_entry(self, widget, data = None):
+	def __cb_entry_clicked(self, widget, data = None):
 		"Callback for button presses"
 
 		# from gnome 2.10, the panel doesn't receive focus when clicked
 		if hasattr(self.applet, "request_focus") == True:
 			self.applet.request_focus(data.time)
+
+
+	def __cb_file_changed(self, widget, data = None):
+		"Callback for changed data file"
+
+		popup = self.applet.get_popup_component()
+
+		if self.datafile.get_file() == None:
+			self.entry.set_sensitive(False)
+
+			if self.file_get_current() != "":
+				popup.set_prop("/commands/file-unlock", "sensitive", "1")
+
+			else:
+				popup.set_prop("/commands/file-unlock", "sensitive", "1")
+
+			popup.set_prop("/commands/file-lock", "sensitive", "0")
+			popup.set_prop("/commands/file-reload", "sensitive", "0")
+
+		else:
+			self.entry.set_sensitive(True)
+			popup.set_prop("/commands/file-unlock", "sensitive", "0")
+			popup.set_prop("/commands/file-lock", "sensitive", "1")
+			popup.set_prop("/commands/file-reload", "sensitive", "1")
+
+
+	def about(self):
+		"Displays an about dialog"
+
+		About(self.applet).run()
+
+
+	def file_close(self):
+		"Closes the current data file"
+
+		self.datafile.close()
+		self.entrystore.clear()
+
+
+	def file_get_current(self):
+		"Returns the current data file"
+
+		return "/home/erikg/dev/revelation/pwtest"
+
+
+	def file_open(self, file, password = None):
+		"Opens a data file"
+
+		try:
+			if file in ( "", None ):
+				return
+
+			if password == None:
+				password = dialog.PasswordOpen(None, os.path.basename(file)).run()
+
+			entrystore = self.datafile.load(file, password)
+
+			self.entrystore.clear()
+			self.entrystore.import_entry(entrystore, None)
+			self.entrystore.changed = False
+
+		except dialog.CancelError:
+			return
+
+		except datahandler.FormatError:
+			None.statusbar.set_status("Open failed")
+			dialog.Error(None, "Invalid file format", "The file '%s' contains invalid data." % file).run()
+
+		except ( datahandler.DataError, entry.EntryTypeError, entry.EntryFieldError ):
+			None.statusbar.set_status("Open failed")
+			dialog.Error(None, "Unknown data", "The file '%s' contains unknown data. It may have been created by a more recent version of Revelation.." % file).run()
+
+		except datahandler.VersionError:
+			None.statusbar.set_status("Open failed")
+			dialog.Error(None, "Unknown data version", "The file '%s' has a future version number, please upgrade Revelation to open it." % file).run()
+
+		except datahandler.DetectError:
+			None.statusbar.set_status("Open failed")
+			dialog.Error(None, "Unable to detect filetype", "The file type of the file '%s' could not be automatically detected. Try specifying the file type manually." % file).run()
+
+		except IOError:
+			None.statusbar.set_status("Open failed")
+			dialog.Error(None, "Unable to open file", "The file '%s' could not be opened. Make sure that the file exists, and that you have permissions to open it." % file).run()
+
+
+	def file_reload(self):
+		"Reloads the current data file"
+
+		if self.datafile.get_file() != None:
+			self.file_open(self.datafile.get_file(), self.datafile.get_password())
+
+
+	def launch_revelation(self):
+		"Launches Revelation"
+
+		util.execute_child("revelation")
+
+
+
+class About(gnome.ui.About):
+	"About dialog"
+
+	def __init__(self, parent):
+		gnome.ui.About.__init__(
+			self, "Revelation Account Lookup", config.VERSION, config.COPYRIGHT,
+			""""%s"\n\nAn applet for looking up account data from Revelation""" % config.RELNAME,
+			( config.AUTHOR, ), None, "",
+			parent.render_icon(ui.STOCK_REVELATION, gtk.ICON_SIZE_DIALOG)
+		)
+
+
+	def run(self):
+		"Displays the dialog"
+
+		self.show_all()
 
 
 
